--- a/app/src/main/res/layout/activity_add_city.xml
+++ b/app/src/main/res/layout/activity_add_city.xml
@@ -3,17 +3,14 @@
         android:orientation="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="#FFB1B1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         tools:context=".AddCityActivity">
 
     <android.support.v7.widget.Toolbar
-            android:fitsSystemWindows="true"
             android:id="@+id/addCity_toolbar"
             android:layout_width="match_parent"
-            android:background="?attr/colorPrimary"
             android:layout_height="?attr/colorPrimary">
 
         <EditText
