2019-5-22 22:37 更新了切换城市更新背景天气动画的功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+        <com.example.meiqiweather.customizeView.DynamicWeatherView
+                android:id="@+id/dw_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
     </FrameLayout>
 
     <android.support.v4.view.ViewPager
