--- a/app/src/main/res/layout/activity_add_city.xml
+++ b/app/src/main/res/layout/activity_add_city.xml
@@ -3,7 +3,7 @@
         android:orientation="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:background="#FFB1B1"
+        android:background="#494949"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".AddCityActivity">
@@ -16,10 +16,15 @@
         <EditText
                 android:id="@+id/addCity_eText"
                 android:singleLine="true"
+                android:hint="城市名"
+                android:background="#00FFFFFF"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
     </android.support.v7.widget.Toolbar>
+
+    <View android:layout_width="match_parent" android:layout_height="1dp"
+          android:background="#000000" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/add_list"
