--- a/app/src/main/res/layout/addcity_item.xml
+++ b/app/src/main/res/layout/addcity_item.xml
@@ -29,6 +29,7 @@
 
     </LinearLayout>
 
-    <View style="@style/weather_view1" />
+    <View android:layout_width="match_parent" android:layout_height="1dp"
+          android:background="#000000" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
 
 </LinearLayout>
