--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,14 +5,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#494949"
-        tools:context=".SettingActivity">
+        android:orientation="vertical"
+        tools:context=".SettingActivity" >
 
     <android.support.v7.widget.Toolbar
             android:id="@+id/setting_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/colorPrimary"/>
 
-
+    <!--<Switch-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"/>-->
 
 
 </LinearLayout>
