--- a/app/src/main/res/layout/activity_city_manage.xml
+++ b/app/src/main/res/layout/activity_city_manage.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="#494949"
+        android:background="#00437A"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -14,6 +14,7 @@
     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
+            android:background="#fff"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
