--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <com.example.meiqiweather.customizeView.DynamicWeatherView
-                android:id="@+id/dw_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+        <!--<com.example.meiqiweather.customizeView.DynamicWeatherView-->
+                <!--android:id="@+id/dw_view"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"/>-->
 
     </FrameLayout>
 
