--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#494949"
+        android:background="#00437A"
         android:orientation="vertical"
         tools:context=".SettingActivity" >
 
@@ -13,9 +13,21 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/colorPrimary"/>
 
-    <!--<Switch-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"/>-->
+    <LinearLayout
+            android:background="#fff"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
