--- a/app/src/main/res/layout/city_item.xml
+++ b/app/src/main/res/layout/city_item.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:background="@drawable/item_background"
-                android:layout_margin="10dp"
-                android:layout_marginBottom="20dp"
+                android:id="@+id/rl"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="120dp">
 
     <LinearLayout
             android:gravity="center_vertical"
@@ -19,10 +20,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="惠城"
+                android:textSize="18sp"
                 android:textStyle="bold"/>
 
         <TextView
                 android:id="@+id/text_2"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="阴"/>
@@ -41,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="24°"
-                android:textSize="28sp"/>
+                android:textSize="40sp"/>
 
     </LinearLayout>
 
