--- a/app/src/main/res/layout/life_item.xml
+++ b/app/src/main/res/layout/life_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_height="wrap_content"
               android:orientation="vertical"
+              android:background="@drawable/life_item_selector"
               android:layout_width="match_parent">
 
     <LinearLayout android:layout_marginTop="10dp"
