--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -19,12 +19,73 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="界面显示设置"
+                android:textColor="#000"
+                android:layout_height="wrap_content"/>
+
+        <View style="@style/weather_view1"
+              android:layout_marginLeft="10dp"
+              android:layout_marginRight="10dp"/>
+
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_height="70dp">
+
+            <TextView
+                    android:layout_marginLeft="16dp"
+                    android:text="逐三小时预报"
+                    android:textSize="20sp"
+                    android:layout_weight="1"
+                    android:textColor="#000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <Switch
+                    android:id="@+id/switch_1"
+                    android:layout_marginRight="16dp"
+                    android:checked="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
         </LinearLayout>
+
+        <View style="@style/weather_view1"
+              android:layout_marginLeft="10dp"
+              android:layout_marginRight="10dp" />
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_height="70dp">
+
+            <TextView
+                    android:layout_marginLeft="16dp"
+                    android:text="日落日出"
+                    android:textSize="20sp"
+                    android:layout_weight="1"
+                    android:textColor="#000"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <Switch
+                    android:id="@+id/switch_2"
+                    android:layout_marginRight="16dp"
+                    android:checked="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <View style="@style/weather_view1"
+              android:layout_marginLeft="10dp"
+              android:layout_marginRight="10dp" />
 
 
     </LinearLayout>
